# codetogether

./: .gitignore  LICENSE  README.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
api/: main.py  pyproject.toml
src/: App.tsx  Room.tsx  index.css  main.tsx
src/components/: realtime-monaco.tsx
src/components/ui/: button-variants.ts  button.tsx  field.tsx  input.tsx  label.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  textarea.tsx
src/hooks/: compile-code.ts  use-connect-on-mount.ts
src/lib/supabase/: client.ts
src/services/: compile-code.ts
