[project]
name = "codealong-api"
version = "0.1.0"
description = "API for CodeAlong, a platform for simple collaborative coding sessions."
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "httpx>=0.28.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]
